@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.413 2019/07/31 13:09:36 brook Exp $
+# $NetBSD: Makefile,v 1.414 2019/07/31 13:11:28 brook Exp $
 
 COMMENT=	Mathematics
 
@@ -31,6 +31,7 @@ SUBDIR+=	R-abind
 SUBDIR+=	R-acepack
 SUBDIR+=	R-akima
 SUBDIR+=	R-aplpack
+SUBDIR+=	R-backports
 SUBDIR+=	R-bbmle
 SUBDIR+=	R-bitops
 SUBDIR+=	R-car
