@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 13:11:28 brook Exp $
+
+CATEGORIES=	math R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/backports/
+COMMENT=	Reimplementations of functions introduced since R-3.0.0
+LICENSE=	gnu-gpl-v2
+
+R_PKGNAME=	backports
+R_PKGVER=	1.1.4
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
